--- a/src/styles/animeList.css
+++ b/src/styles/animeList.css
@@ -55,3 +55,18 @@
     font-optical-sizing: auto;
     font-style: normal;
 }
+
+@media (max-width: 767px) {
+    .anime-list-container {
+        margin-top: 145px;
+    }
+    .anime-item {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+    .anime-item-title {
+        width: 100%;
+        max-width: 240px;
+    }
+}
