--- a/src/styles/searchBar.css
+++ b/src/styles/searchBar.css
@@ -10,3 +10,20 @@
     border-radius: 50px;
     background-color: var(--background-color-dark);
 }
+
+@media (min-width: 768px) and (max-width: 1024px) {
+    .query {
+        width: 260px;
+        height: 56px;
+    }
+}
+
+@media (max-width: 767px) {
+    .query {
+        width: 100%;
+        max-width: 340px;
+        height: 50px;
+        font-size: 10pt;
+        margin: 0;
+    }
+}
